# apple-deals-crawler

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: crawl.yml  docs.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-crawling-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/phases/03-database-maintenance/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/04-tui/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-telegram-alerts/: 05-01-PLAN.md  05-02-PLAN.md  05-CONTEXT.md  05-RESEARCH.md
.planning/phases/06-automation-deployment/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-CONTEXT.md  06-RESEARCH.md
.planning/phases/07-documentation/: 07-01-PLAN.md  07-CONTEXT.md  07-RESEARCH.md
.planning/phases/09-data-quality/: 09-CONTEXT.md  09-PLAN.md  09-UAT.md
.planning/phases/10-tui-filters-ordering/: 10-01-PLAN.md  10-01-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md
.planning/phases/11-alert-noise-filtering/: 11-01-PLAN.md  11-01-SUMMARY.md  11-CONTEXT.md
cli-reference/: index.html
configuration/: index.html
docs/: cli-reference.md  configuration.md  index.md  installation.md  self-hosting.md
installation/: index.html
search/: search_index.json
self-hosting/: index.html
src/apple_deals/alerts/: telegram.py
src/apple_deals/cli/: main.py
src/apple_deals/crawlers/: base.py  mac_center.py  tiendasishop.py
src/apple_deals/db/: crud.py  models.py  session.py
src/apple_deals/tui/: app.py
tests/: test_alerts.py  test_cli.py  test_crawlers.py  test_crud.py  test_db.py  test_db_crud.py
tests/fixtures/: mac_center_products.json  tiendasishop_products.json
