[project]
name = "apple-deals-crawler"
version = "0.1.0"
description = "Track daily Apple Mac prices from Colombian retailers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.59.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "typer>=0.25.1",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
apple-deals = "apple_deals.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_deals"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "mypy>=2.0.0",
    "detect-secrets>=1.5.0",
    "pytest>=9.0.3",
    "sqlalchemy[mypy]>=2.0.49",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
